@@ -174,6 +174,14 @@ vFile:stat
   vFile:fstat but takes a filename rather than an open file
   descriptor.
 
+* Changed remote packets
+
+qXfer:features:read:target.xml
+
+  The XML that is sent as a response can now include a "device" element
+  that can be used for passing information when the remote inferior
+  represents a device, e.g.  a GPU.
+
 *** Changes in GDB 15
 
 * The MPX commands "show/set mpx bound" have been deprecated, as Intel
